@@ -88,6 +88,10 @@ environment variable, like this:
 
 =item * raw
 
+B<EXPERIMENTAL>: this doesn't seem to work right on openbsd, and until I
+figure it out the interface and implementation for this option may change
+or go away.
+
 If set to true (false is the default) then output will not be passed
 into the C<on_stdout> and C<on_stderr> callbacks as lines, but instead
 as chunks in whatever order they come.  New lines will not be stripped.
